--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Discord bot token
 TOKEN=
+
+# Personal MongoDB connection string
+DATABASE=mongodb+srv://<username>:<password>@<cluster>/<database>?retryWrites=true&w=majority
