--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,35 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>dv8tion</id>
+            <name>m2-dv8tion</name>
+            <url>https://m2.dv8tion.net/releases</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-beta.4</version>
+            <version>5.0.0-beta.12</version>
+        </dependency>
+
+        <!-- LAVA PLAYER -->
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.3.77</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.Topis-Lavalink-Plugins</groupId>
+            <artifactId>Topis-Source-Managers</artifactId>
+            <version>2.0.6</version>
         </dependency>
 
         <!-- LOGGER -->
